# django_ninja_template

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
common/: cache.py
common/cache/: user.py
django_ninja_template/: asgi.py  settings.py  urls.py  wsgi.py
main/: auth.py  response.py  urls.py
main/cache/: user.py
main/handlers/: user.py
main/models/: base.py  user.py
main/params/: __init__.py  user.py
main/results/: __init__.py  user.py
